--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,27 @@
+version: "3.9"
+
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: nodejs-app
+    ports:
+      - "3000:3000"
+    volumes:
+      - .:/app
+      - /app/node_modules
+    environment:
+      DB_HOST: db
+      DB_USER: testuser
+      DB_PASSWORD: testpassword
+      DB_NAME: testdb
+      EMAIL_USER: "register@allofdubai.com"
+      EMAIL_PASS: "pKjgc@JPGQ2zDP@"
+      ADMIN_EMAIL: "register@allofdubai"
+    depends_on:
+      - db
+
   db:
     image: mysql:8.0
     container_name: mysql-container
@@ -9,9 +32,14 @@ services:
       MYSQL_PASSWORD: testpassword
     ports:
       - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
 
   adminer:
     image: adminer
     container_name: adminer-container
     ports:
       - "8080:8080"
+
+volumes:
+  db_data:
